# oegobanjang

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DATA_GENERATION_REPORT.md  DESIGN.md  FOLDER_STRUCTURE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent_runtime/: __init__.py  runner.py
backend/app/api/: deps.py  expert_deps.py
backend/app/db/: base.py  counters.py  ids.py  session.py
backend/app/domain/: auth_exceptions.py  auth_tokens.py  case_transitions.py  evidence_exceptions.py  exceptions.py  expert_exceptions.py  outbox_exceptions.py  package_exceptions.py  pii.py  response_link_exceptions.py  rules.py  webhook_exceptions.py
backend/app/models/: __init__.py  agent_note.py  approval.py  auth.py  autonomy.py  briefing.py  case.py  citation.py  company.py  contact.py  csv_import.py  daily_briefing.py  delegation.py  document.py  draft.py  evidence.py  expert.py  handoff.py  hiring.py  interpretation.py  langchain_checkpoint.py  membership.py  notification.py  outbox.py  run.py  runtime_execution.py  runtime_state.py  stat_snapshot.py  thread.py  user.py  worker.py
backend/app/schemas/: approval.py  auth.py  briefing.py  case.py  citation.py  delegation.py  draft.py  evidence.py  expert.py  notification.py  outbox.py  package.py  response_link.py  run.py  thread.py  webhook.py
backend/app/services/: agent_chat_rag.py  agent_dispatcher.py  agent_service.py  approval_service.py  approvals.py  auth.py  auth_service.py  briefings.py  (+30 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_agent_aggregator.py  test_agent_api_handoff.py  test_agent_chat_alignment.py  test_agent_chat_openai_smoke.py  test_agent_state_loader.py  test_agent_workflow.py  test_api_approval_requests.py  test_api_approvals.py  test_api_auth.py  test_api_briefings.py  test_api_briefings_generate.py  test_api_cases.py  test_api_citations.py  test_api_delegations.py  test_api_drafts.py  test_api_evidence.py  test_api_expert.py  test_api_notifications.py  test_api_outbox.py  test_api_packages.py  test_api_reads.py  test_api_response_link.py  test_api_runs.py  test_api_threads.py  test_api_webhooks.py  test_approval_api.py  test_briefing_service.py  test_contact_persistence_service.py  test_context_service.py  test_daily_briefing_api.py  test_daily_briefing_idempotency.py  test_daily_briefing_natural_language.py  test_daily_briefing_service.py  test_daily_briefing_sqlalchemy_repository.py  test_ddl_parity.py  test_domain_rules.py  test_evidence_ingest.py  test_guardrails.py  test_handoff_package.py  (+25 more)
rag/: .gitignore  README.md  pyproject.toml
rag/docs/: ORCHESTRATION_EVAL_HARNESS.md  WORKFORCE_RETRIEVAL_QUALITY_EVAL.md
rag/tests/: conftest.py  test_agent_factory_offline_smoke.py  test_agent_tools.py  test_agent_tools_extended.py  test_api.py  test_chunking_contract.py  test_domain_splitters.py  test_evaluate_orchestration.py  test_events.py  test_graph_api.py  test_grounded_answer.py  test_mission_m1_m3.py  test_mission_m2_visa.py  test_multilingual_loader.py  test_multilingual_retriever.py  test_orchestration_contracts.py  test_orchestration_graph.py  test_orchestration_guard.py  test_orchestration_router.py  test_pgvector_index.py  test_pipeline_parity.py  test_rag_ingest_quality_gate.py  test_raw_ingest_cleaning.py  test_raw_source_unit_contract.py  test_visa_retriever.py  test_workforce_metadata_normalizer.py  test_workforce_rag_eval_dataset.py  test_workforce_retrieval_quality_eval.py  test_workforce_runtime_retriever_contract.py  test_workforce_vector_records.py
(+1088 files in other folders)
