[project]
name = "oegobanjang"
version = "0.1.0"
description = "Foreign hiring operations OS with FastAPI and Agent Runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "chromadb>=0.5.0",
    "fastapi>=0.135.2",
    "grad-cam>=1.5.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=1.0.0",
    "pandas>=3.0.1",
    "python-multipart>=0.0.22",
    "setuptools==80.10.2",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.26.0",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.24.2",
    "opencv-python>=4.10.0.84",
    "scikit-learn>=1.4.2",
    "streamlit>=1.19.0",
    "altair<5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "langchain>=1.2,<2",
    "langchain-core>=1.3,<2",
    "langchain-openai>=1.2,<2",
    "langchain-chroma>=1.1,<2",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.1,<5",
    "chromadb>=0.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pillow>=12.1.1",
    "optuna>=4.7.0",
    "mtcnn>=1.0.0",
    "mediapipe>=0.10.32",
    "langchain-text-splitters>=1.1,<2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pymupdf>=1.24.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
markers = [
    "openai_smoke: real OpenAI API smoke tests disabled unless explicitly enabled",
]
