[project]
name = "oegobanjang-backend"
version = "0.1.0"
description = "외고반장 백엔드 접속점 — docs/DB_SCHEMA.md 정본의 FastAPI+SQLAlchemy+Alembic 구현"
readme = "README.md"
requires-python = ">=3.14"  # uuid.uuid7() 표준 라이브러리(app/db/ids.py)는 3.14+ 전용
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
